# Mini-Lab

./: README.md
Mini-Lab Matlab Gui/: fig.fig  fig.m
minilab_hardware/devel/: .catkin  .rosinstall  setup.sh
minilab_hardware/devel/include/roboteq_msgs/: Command.h  Feedback.h  Status.h
minilab_hardware/devel/lib/pkgconfig/: minilab_demo_hardware.pc  minilab_driver.pc  minilab_launch.pc  minilab_navigation.pc  minilab_teleop.pc  odometry_listener.pc  roboclaw.pc  roboteq_diagnostics.pc  roboteq_driver.pc  roboteq_msgs.pc  safe_teleop.pc
minilab_hardware/devel/lib/roboclaw/: minilab_node
minilab_hardware/devel/lib/roboteq_driver/: driver_node
minilab_hardware/src/driver/roboclaw/: CMakeLists.txt~  package.xml
minilab_hardware/src/drivers/roboclaw/: package.xml
minilab_hardware/src/minilab_demo_hardware/: CMakeLists.txt  package.xml
minilab_hardware/src/minilab_driver/: CMakeLists.txt  package.xml
minilab_hardware/src/minilab_driver/launch/: minilab_driver.launch  roboclaw.launch  roboteq_driver.launch  roboteq_driver.launch~
minilab_hardware/src/minilab_launch/: CMakeLists.txt  package.xml
minilab_hardware/src/minilab_launch/launch/: depthimage_to_laserscan.launch~  fake_laser.launch  minilab.launch~  minilab_IR.launch~  minilab_IR_US.launch  minilab_cam_astra.launch  minilab_cam_asus.launch  minilab_configuration.launch~  minilab_driver.launch~  minilab_driver_camera.launch  minilab_driver_camera.launch~  minilab_driver_hokuyo.launch  minilab_driver_hokuyo.launch~  minilab_hokuyo.launch  minilab_state_publisher.launch  minilab_state_publisher.launch~
minilab_hardware/src/minilab_launch/meshes/MINILABSTL/: Kinect - Asus-Xtion-capteur-1.STL  Pièce1.STEP  US_sensor_SFR02.STL  capot_arriere.STL  embase_dessous.STL  xtion.dae
minilab_hardware/src/minilab_launch/nav/: cleanhouse.yaml  couloir.pgm  couloir.yaml  couloir.yaml~  enova_1.pgm  enova_1.yaml
minilab_hardware/src/minilab_launch/navigation/: amcl_diff.launch  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
minilab_hardware/src/minilab_launch/urdf/: Gmapping-World.sdf  minilab.urdf  minilab.urdf~
minilab_hardware/src/minilab_model/: CMakeLists.txt
minilab_hardware/src/minilab_navigation/: CMakeLists.txt  gmapping.rviz
minilab_hardware/src/minilab_teleop/: CMakeLists.txt  package.xml
minilab_hardware/src/odometry_listener/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
minilab_hardware/src/odometry_listener/launch/: odometry_roboteq.launch
minilab_hardware/src/odometry_listener/src/: odom_back.cpp  odometry_listener.cpp  odometry_listener.cpp~  odometry_listener_copy.cpp
minilab_hardware/src/safe_teleop/: CMakeLists.txt  package.xml
minilab_workstation/devel/: .catkin  .rosinstall  setup.sh
minilab_workstation/src/minilab_demo_hardware_remote/: CMakeLists.txt  package.xml
minilab_workstation/src/minilab_demo_hardware_remote/launch/: minilab_demo_gmapping.launch  minilab_demo_gmapping.launch~  minilab_demo_navigation.launch  minilab_demo_navigation.launch~  minilab_demo_teleop.launch  minilab_display_cam_with_teleop.launch  minilab_display_cam_with_teleop.launch~  minilab_display_laser_with_teleop.launch  minilab_display_laser_with_teleop.launch~
minilab_workstation/src/minilab_demo_simulation/: CMakeLists.txt  laser.rviz  package.xml
minilab_workstation/src/minilab_demo_simulation/launch/: .launch  minilab_demo_gmapping.launch  minilab_demo_gmapping.launch~  minilab_demo_navigation.launch  minilab_demo_navigation.launch~  minilab_demo_teleop.launch  minilab_demo_teleop.launch~  minilab_display_cam.launch~  minilab_display_cam_with_teleop.launch  minilab_display_cam_with_teleop.launch~  minilab_display_laser_with_teleop.launch  minilab_display_laser_with_teleop.launch~
minilab_workstation/src/minilab_model/: package.xml
minilab_workstation/src/minilab_model/map/: couloir.pgm  enova.yaml  my_map.yaml
minilab_workstation/src/minilab_model/meshes/equiped/: ir1.STL  ir3.STL  ir5.STL
minilab_workstation/src/minilab_model/meshes/indoor/: table.STL  walls.STL  wardrobe.STL
minilab_workstation/src/minilab_model/urdf/: eniso.sdf  indoor.urdf  minilab_equiped.urdf
minilab_workstation/src/minilab_navigation/: gmapping.rviz  package.xml  package.xml~
minilab_workstation/src/minilab_navigation/config/: costmap_params.yaml  costmap_params.yaml~  global_costmap_params.yaml  global_costmap_params.yaml~  move_base_params.yaml  navigation.rviz  navigation.rviz~
minilab_workstation/src/minilab_navigation/launch/: gmapping.launch~  minilab_amcl.launch  minilab_amcl.launch~  minilab_move_base.launch  minilab_move_base.launch~  move_base_digitalarti.launch~  navigation.launch~
minilab_workstation/src/minilab_navigation/meshes/MINILABSTL/: Laser-hokuyo_URG-04LX.STL  embase_capot_batterie.STL  roue-auto-directrice-Guitel_42-32.STL  texture.STL
minilab_workstation/src/minilab_navigation/src/: move_base_example.cpp  patrol.py
minilab_workstation/src/minilab_navigation/urdf/: minilab.urdf
minilab_workstation/src/minilab_simulation/: CMakeLists.txt  package.xml
minilab_workstation/src/minilab_simulation/launch/: buvette.launch  empty_world.launch  indoor.launch  minilab_gazebo.launch  minilab_gazebo.launch~  minilab_simulation.launch  minilab_simulation.launch~  minilab_state_publisher.launch  minilab_state_publisher.launch~
minilab_workstation/src/minilab_simulation/map/: buvette.pgm  cleanhouse.pgm
minilab_workstation/src/minilab_simulation/meshes/MINILABSTL/: Pièce1.IGS  support_telemetrie.STL
minilab_workstation/src/minilab_simulation/urdf/: minilab.urdf~  tag.urdf
minilab_workstation/src/minilab_teleop/: CMakeLists.txt  package.xml
minilab_workstation/src/minilab_teleop/launch/: keyboard_WASD_teleop.launch  keyboard_ZQSD_teleop.launch  logitech.launch  xbox360_teleop.launch
minilab_workstation/src/minilab_teleop/src/: keyboard_teleop  keyboard_teleop_WASD  keyboard_teleop_ZQSD  minilab_joy.cpp  scratchop
minilab_workstation/src/safe_teleop/: package.xml
(+115 files in other folders)
