<?xml version="1.0"?>
<package>
  <name>minilab_driver</name>
  <version>0.1.0</version>
  <description>The minilab_driver package contains launch files starting motor controller</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="sebastien.dignoire@enovarobotics.com">dgnr</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
