<?xml version="1.0"?>
<package>
  <name>minilab_demo_hardware_remote</name>
  <version>0.0.0</version>
  <description>The minilab_demo_hardware_remote package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sebastien.dignoire@enovarobotics.com">dgnr</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
